fix: fixed alignment of back button

--- a/src/public/css/global.css
+++ b/src/public/css/global.css
@@ -380,6 +380,7 @@ body > :not(.footer) {
 .attendance-title,
 .meeting-attendance-title {
   display: flex;
+  align-items: center;
   justify-content: space-between;
   gap: 1.5rem;
   padding: 1.5rem 2rem;
